Fixed layout issues

--- a/app/scss/2-base/_base.scss
+++ b/app/scss/2-base/_base.scss
@@ -20,9 +20,9 @@ body {
 
 .wrapper {
     max-width: 20.4375rem; 
-    margin-bottom: auto;
+    margin: auto 0;
 }
 
 .attribution {
-    margin-top: auto;
+    margin: auto 0;
 }
