--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,11 +100,11 @@ body {
 
 .wrapper {
   max-width: 20.4375rem;
-  margin-bottom: auto;
+  margin: auto 0;
 }
 
 .attribution {
-  margin-top: auto;
+  margin: auto 0;
 }
 
 body {
